deployments/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: post-service-dev
  labels:
    environment: development
