deployments/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: post-service-dev
  labels:
    app: post-service
    environment: development
spec:
  selector:
    app: post-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
